# voice-notes

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: run.sh
src/: __init__.py  analyzer.py  config.py  main.py  processor.py  slack_io.py  storage.py  transcriber.py  watcher.py
tests/: test_analyzer_prompt.py  test_config.py  test_processor.py  test_storage.py
