[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-notes"
version = "0.1.0"
description = "Slack 오디오 첨부를 Whisper로 전사하고 Claude로 3종 텍스트(원본·상세·요약)를 생성해 스레드에 올리는 봇"
requires-python = ">=3.11"
dependencies = [
    "slack-bolt>=1.20.0",
    "slack-sdk>=3.27.0",
    "openai-whisper>=20240930",
    "imageio-ffmpeg>=0.5.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
voice-notes = "src.main:main"

[tool.setuptools]
packages = ["src"]
